Adding ability to end the turn
